--- a/ssj-demo/pom.xml
+++ b/ssj-demo/pom.xml
@@ -16,10 +16,10 @@
 		<commons-httpclient.version>3.1</commons-httpclient.version>
 		<commons-lang3.version>3.3.2</commons-lang3.version>
 		<commons-codec.version>1.9</commons-codec.version>
-		<commons-fileupload.version>1.3.1</commons-fileupload.version>
+		<commons-fileupload.version>[1.3.3,)</commons-fileupload.version>
 		<slf4j.version>1.7.6</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
-		<jackson.version>2.8.11</jackson.version>
+		<jackson.version>[2.9.10.1,)</jackson.version>
 		<junit.version>4.11</junit.version>
 	</properties>
 
