--- a/ssj-demo/pom.xml
+++ b/ssj-demo/pom.xml
@@ -18,7 +18,7 @@
 		<commons-codec.version>1.9</commons-codec.version>
 		<commons-fileupload.version>[1.3.3,)</commons-fileupload.version>
 		<slf4j.version>1.7.6</slf4j.version>
-		<log4j.version>1.2.17</log4j.version>
+		<log4j.version>2.13.0</log4j.version>
 		<jackson.version>[2.9.10.1,)</jackson.version>
 		<junit.version>4.11</junit.version>
 	</properties>
@@ -101,8 +101,8 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
 		<!-- end slf4j -->
