--- a/jdk-demo/pom.xml
+++ b/jdk-demo/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.plumdo</groupId>
 	<artifactId>jdk-demo</artifactId>
-	<version>1.0</version>
+	<version>1.0.0</version>
 	<name>jdk-demo</name>
 	<description />
 
@@ -13,7 +13,7 @@
         <java.version>1.8</java.version>
 		<lombok.version>1.16.18</lombok.version>
 		<slf4j.version>1.7.25</slf4j.version>
-		<log4j.version>2.13.0</log4j.version>
+		<log4j.version>[2.13.2,)</log4j.version>
 	</properties>
 
 	<dependencies>
