--- a/ssj-demo/pom.xml
+++ b/ssj-demo/pom.xml
@@ -12,13 +12,13 @@
 		<jdk.version>1.6</jdk.version>
 		<spring.version>[4.3.17,)</spring.version>
 		<druid.version>1.0.15</druid.version>
-		<mysql.version>5.1.38</mysql.version>
+		<mysql.version>[8.0.16,)</mysql.version>
 		<commons-httpclient.version>3.1</commons-httpclient.version>
 		<commons-lang3.version>3.3.2</commons-lang3.version>
 		<commons-codec.version>1.9</commons-codec.version>
 		<commons-fileupload.version>[1.3.3,)</commons-fileupload.version>
 		<slf4j.version>1.7.6</slf4j.version>
-		<log4j.version>2.13.0</log4j.version>
+		<log4j.version>[2.13.2,)</log4j.version>
 		<jackson.version>[2.9.10.1,)</jackson.version>
 		<junit.version>4.11</junit.version>
 	</properties>
