--- a/jdk-demo/pom.xml
+++ b/jdk-demo/pom.xml
@@ -14,6 +14,7 @@
 		<lombok.version>1.16.18</lombok.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<log4j.version>[2.13.2,)</log4j.version>
+        <fastjson.version>1.2.39</fastjson.version>
 	</properties>
 
 	<dependencies>
@@ -39,6 +40,14 @@
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
